--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>CSS로 시작하기</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body>
