--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>레벨 1 제목입니다</h1>
 
     <p>
-      이것은 단락입니다. 본문에는 <span>span 요소</span>와
+      이것은 단락입니다. 본문에는 <span class="one">span 요소</span>와
       <a href="http://example.com">링크</a>가 있습니다.
     </p>
 
@@ -18,7 +18,7 @@
 
     <ul>
       <li>항목 하나</li>
-      <li>항목 둘</li>
+      <li class="one">항목 둘</li>
       <li>항목 <em>셋</em></li>
       <li>추가입니다.</li>
     </ul>
