--- a/index.html
+++ b/index.html
@@ -1,26 +1,12 @@
-<!doctype html>
-<html lang="ko-KR">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8" />
-    <title>CSS로 시작하기</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <title>나의 CSS 실험</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
-
   <body>
-    <h1>레벨 1 제목입니다</h1>
-
-    <p>
-      이것은 단락입니다. 본문에는 <span class="one">span 요소</span>와
-      <a href="http://example.com">링크</a>가 있습니다.
-    </p>
-
-    <p>이것은 두 번째 단락입니다. <em>강조된</em> 요소를 포함합니다.</p>
-
-    <ul>
-      <li>항목 하나</li>
-      <li class="one">항목 둘</li>
-      <li>항목 <em>셋</em></li>
-      <li>추가입니다.</li>
-    </ul>
+    <h1>헬로우 월드!</h1>
+    <p>이것은 나의 첫 번째 CSS 예제입니다</p>
   </body>
 </html>
