--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <h1>헬로우 월드!</h1>
-    <p>이것은 나의 첫 번째 CSS 예제입니다</p>
+    <img class="logo" src="images/google_logo.svg" alt="logo">
+    <p class="search">검색 또는 URL 입력</p>
   </body>
 </html>
